--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
             <div class="jumbotron"
                 <div class="container">
-                <h1 class="mainpage1" style="color:black"><b>Software Engineer</b></h1></br>
+                <h1 class="mainpage1" style="color:black"><b><br>Software Engineer</b></h1></br>
                 <h1 class="mainpage2" style="color:black"><b>Coder</b></h1></br>
                 <h1 class="mainpage3" style="color:black"><b>Developer</b></h1>
             </div>
