--- a/index.html
+++ b/index.html
@@ -93,10 +93,18 @@
 
         <Section id="features" class="features">
 
-            <div class="jumbotron"
-                <div class="container">
-                <h1 class="mainpage1" style="color:black"><b><br>Software Engineer</b></h1></br>
-                <h1 class="mainpage2" style="color:black"><b>Coder</b></h1></br>
+            <div class="jumbotron">
+                 <!--style="background-image: url(img/blue-code.png);-->
+                 <!--background-size: 100% 100%;-->
+                 <!--height:500px;-->
+                 <!--padding-top: 0;-->
+                 <!--padding-bottom: 0;-->
+                 <!--padding-left: 0;-->
+                 <!--padding-right: 0;">-->
+
+            <div class="container">
+                <h1 class="mainpage1" style="color:black"><b>Software Engineer</b></h1>
+                <h1 class="mainpage2" style="color:black"><b>Coder</b></h1>
                 <h1 class="mainpage3" style="color:black"><b>Developer</b></h1>
             </div>
             </div>
