--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="container">
                 <h1 class="mainpage1" style="color:#008060; font-family: 'Courier New';"><b>Software Engineer</b></h1>
                 <h1 class="mainpage2" style="color:#00664d; font-family: 'Courier New';"><b>Coder</b></h1>
-                <h1 class="mainpage3" style="color:#004d39; font-family: 'Courier New';><b>Developer</b></h1>
+                <h1 class="mainpage3" style="color:#004d39; font-family: 'Courier New';"><b>Developer</b></h1>
             </div>
             </div>
 
