--- a/About.html
+++ b/About.html
@@ -110,7 +110,7 @@
                             I was working as a Performance Optimizer in Teradata, India. While working, I realized that there is so much more that I as a Computer Science student must learn and know.
                             That is when I decided to pursue Masters in Computer Science and flew down to USA.
                             I have undertaken subjects from various domains like from Machine Learning to Distributed Systems to Data Intensive Computing to Information Retrieval.
-                            My aim is to learn in such a way that I have a head start in whichever domain I start working.
+                            My aim is to learn in such a way that I have a head start in whichever domain I start working. I have worked as a Front-End Developer in my Summer Internship at KPIT.
                             As a coder, developer, software engineer I am open to working in any of the software domain.
                             I would love to work as a Java Developer, as a UI developer, as a data analyst, on Artificial Intelligence.
                             If you are an employer who is looking to hire in any of the above mentioned domains then I would request you to visit the
