--- a/Resume.html
+++ b/Resume.html
@@ -46,8 +46,6 @@
         <script type="text/javascript" src="Bootstrap/bootstrap.min.js"></script>
         <script type="text/javascript" src="Bootstrap/bootstrap.js"></script>
         <script type="text/javascript" src="jquery-ui-1.11.4.custom/jquery-ui.js"></script>
-        <script type="text/javascript" src="Bootstrap/jquery.dataTables.min.js"></script>
-        <script type="text/javascript" src="Bootstrap/dataTables.bootstrap.min.js"></script>
 
     </head>
     <body>
@@ -57,32 +55,26 @@
 
         <header id="navigation" class="navbar-fixed-top navbar">
             <div class="container-fixed">
-                <div class="navbar-header pull left">
-                    <!-- responsive nav button -->
-                    <button type="button" id="toggle-btn" class="nav-close navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <i  class="fa fa-bars fa-2x"></i>
-                    </button>
-                    <!-- /responsive nav button -->
 
-                    <!-- logo -->
-                    <a class="navbar-brand" href="#body">
-                        <!--<a href="http://fontmeme.com/fancy-fonts/"><img src="http://fontmeme.com/embed.php?text=Garima%20Chaturvedi&name=AMLTRIAL.ttf&size=40&style_color=15155E" alt="Fancy Fonts"></a>-->
-                        <img src="img/logo9.png" id = "logoid" alt="Garima Chaturvedi">
-                    </a>
-                    <!-- /logo -->
+                <!-- responsive nav button -->
+                <button type="button" id="toggle-btn" class="nav-close navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <!--<span class="sr-only">Toggle navigation</span>-->
+                    <i  class="fa fa-bars"></i>
+                </button>
+                <!-- /responsive nav button -->
 
-                </div>
+                <!-- logo -->
+                <a class="navbar-brand" href="#">
+                    <img src="img/logo9.png" id = "logoid" alt="Garima Chaturvedi">
+                </a>
+                <!-- /logo -->
+            </div>
 
 
                 <div class="collapse navbar-collapse collapse nav">
                     <div class="nav-right" id="menu1">
                         <ul class="nav navbar-nav navbar-right">
-                            <li ><a id="nv1" target="_top" href="index.html">Home</a></li>
-                            <li ><a id="nv2" target="_top" href="About.html">About</a></li>
-                            <li class="active"><a id="nv3" target="_top" href="#">Resume</a></li>
-                            <li ><a id="nv4" target="_top" href="FAQs.html">FAQs</a></li>
-                            <li ><a id="nv5" target="_top" href="Contact.html">Contact</a></li>
+                            <li ><a id="nv5" target="_top" href="index.html">Home</a></li>
                         </ul>
                     </div>
                 </div>
@@ -93,10 +85,8 @@
         </header>
 
         <Section id="mainbody" class="container-fluid" name="newpane">
-
-        <iframe name="if" id="resume" src="https://drive.google.com/file/d/0B_F7OfgZg3p1UEpNMkhmTlJPdms/preview"></iframe>
+			<iframe name="if" id="resume" src="https://drive.google.com/file/d/0B3XCH_vBf5nRQ1dFUVp1eXFPQTQ/preview"></iframe>
         
-        <a href="javascript:void(0);" id="back-top"><i class="fa fa-angle-up fa-3x"></i></a>
 
         <!-- Essential jQuery Plugins
         ================================================== -->
@@ -106,56 +96,9 @@
         <script src="js/jquery.singlePageNav.min.js"></script>
         <!-- Twitter Bootstrap -->
         <script src="js/bootstrap.min.js"></script>
-        <!-- jquery.fancybox.pack -->
-        <script src="js/jquery.fancybox.pack.js"></script>
-        <!-- jquery.mixitup.min -->
-        <script src="js/jquery.mixitup.min.js"></script>
-        <!-- jquery.parallax -->
-        <script src="js/jquery.parallax-1.1.3.js"></script>
-        <!-- jquery.countTo -->
-        <script src="js/jquery-countTo.js"></script>
-        <!-- jquery.appear -->
-        <script src="js/jquery.appear.js"></script>
-        <!-- Contact form validation -->
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.32/jquery.form.js"></script>
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.11.1/jquery.validate.min.js"></script>
-        <!-- Google Map -->
-        <!--<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>-->
-        <!-- jquery easing -->
         <script src="js/jquery.easing.min.js"></script>
-        <!-- jquery easing -->
-        <!--<script type="text/javascript" src="Bootstrap/jquery-2.2.0.min.js"></script>
-        <script type="text/javascript" src="Bootstrap/bootstrap.min.js"></script>
-        <script type="text/javascript" src="Bootstrap/bootstrap.js"></script>
-        <script type="text/javascript" src="Bootstrap/select2.min.js"></script>
-        <script type="text/javascript"
-                src="jquery-ui-1.11.4.custom/jquery-ui.js"></script>
-        <script type="text/javascript" src="Bootstrap/jquery.dataTables.min.js"></script>
-        <script type="text/javascript"
-                src="Bootstrap/dataTables.bootstrap.min.js"></script>
-        <script src="Highcharts-4.1.5/js/highcharts.js"></script>
-        <!--<script src="Highcharts-4.1.5/js/adapters/standalone-framework.js"></script>-->
-        <!--<script src="Highcharts-4.1.5/js/highcharts-more.js"></script>
-        <script src="Highcharts-4.1.5/js/modules/exporting.js"></script>
-        <script src="Highcharts-4.1.5/js/modules/solid-gauge.js"></script>
-        <script src="Highcharts-4.1.5/js/HighchartsDesing.js"></script>
-        <script src="Highcharts-4.1.5/js/animation.js"></script>-->
-        <script src="js/wow.min.js"></script>
-        <script>
-            var wow = new WOW ({
-                    boxClass:     'wow',      // animated element css class (default is wow)
-                    animateClass: 'animated', // animation css class (default is animated)
-                    offset:       120,          // distance to the element when triggering the animation (default is 0)
-                    mobile:       false,       // trigger animations on mobile devices (default is true)
-                    live:         true        // act on asynchronously loaded content (default is true)
-                }
-            );
-            wow.init();
-        </script>
+
         <!-- Custom Functions -->
-
-
-
 
         <script>
             $("#toggle-btn").on("click", function () {
