--- a/index.html
+++ b/index.html
@@ -269,17 +269,17 @@
                 if ($("#toggle-btn").hasClass("nav-close")) {
                     $("#toggle-btn").find(".nav-close").remove("nav-close");
                     $("#toggle-btn").addClass("nav-open");
-                    $("#menu1, #menu2").toggle();
+                    $("#menu1").toggle();
                 }
                 else {
                     $("#toggle-btn").find(".nav-open").remove("nav-open");
                     $("#toggle-btn").addClass("nav-close");
-                    $("#menu1, #menu2").hide();
+                    $("#menu1").hide();
                 }
             });
 
             $(window).resize(function() {
-                $("#menu1, #menu2").show();
+                $("#menu1").show();
 
             });
         </script>
