--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <!-- Google Font -->
 
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
 
         <!-- CSS
