--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         <!-- Modernizer Script for old Browsers -->
         <script src="js/modernizr-2.6.2.min.js"></script>
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+        <!-- jquery.fancybox  -->
+        <link rel="stylesheet" href="css/jquery.fancybox.css">
         <script type="text/javascript" src="Bootstrap/bootstrap.min.js"></script>
         <script type="text/javascript" src="Bootstrap/bootstrap.js"></script>
 
