--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
 		<!-- Fontawesome Icon font -->
         <link rel="stylesheet" href="css/font-awesome.min.css">
+        <!-- jquery.fancybox  -->
+        <link rel="stylesheet" href="css/jquery.fancybox.css">
         <!-- animate -->
         <link rel="stylesheet" href="css/animate.css">
         <!-- Main Stylesheet -->
@@ -37,8 +39,7 @@
         <!-- Modernizer Script for old Browsers -->
         <script src="js/modernizr-2.6.2.min.js"></script>
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-        <!-- jquery.fancybox  -->
-        <link rel="stylesheet" href="css/jquery.fancybox.css">
+        <script type="text/javascript" src="Bootstrap/jquery-2.2.0.min.js"></script>
         <script type="text/javascript" src="Bootstrap/bootstrap.min.js"></script>
         <script type="text/javascript" src="Bootstrap/bootstrap.js"></script>
 
