--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         <!-- Google Font -->
 
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+        
 
         <!-- CSS
         ================================================== -->
@@ -42,6 +43,7 @@
         <script type="text/javascript" src="Bootstrap/jquery-2.2.0.min.js"></script>
         <script type="text/javascript" src="Bootstrap/bootstrap.min.js"></script>
         <script type="text/javascript" src="Bootstrap/bootstrap.js"></script>
+        <script type="text/javascript" src="jquery-ui-1.11.4.custom/jquery-ui.js"></script>
 
     </head>
     <body>
@@ -241,6 +243,10 @@
 
         <!-- Essential jQuery Plugins
         ================================================== -->
+        <!-- Main jQuery -->
+        <script src="js/jquery-1.11.1.min.js"></script>
+        <!-- Single Page Nav -->
+        <script src="js/jquery.singlePageNav.min.js"></script>
         <!-- Twitter Bootstrap -->
         <script src="js/bootstrap.min.js"></script>
         
@@ -286,11 +292,17 @@
             });
         </script>
 
-		<!-- For active tab change in navbar-- END-->
+		
 
+</script>
+        <!-- For active tab change in navbar-- END -->
 
+        <!-- To change the color of the background as per the values-- END-->
 
         <script src="js/custom.js"></script>
+
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
