--- a/FAQs.html
+++ b/FAQs.html
@@ -18,13 +18,21 @@
 
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
 
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+        <script src="http://code.highcharts.com/highcharts.js" type="text/javascript"></script>
+        <script src="http://code.highcharts.com/modules/exporting.js" type="text/javascript"></script>
+
+
         <!-- CSS
         ================================================== -->
-		<!-- Twitter Bootstrap css -->
-        <link rel="stylesheet" href="css/bootstrap.min.css">
         <!-- Fontawesome Icon font -->
         <link rel="stylesheet" href="css/font-awesome.min.css">
- 
+        <!-- Twitter Bootstrap css -->
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <!-- jquery.fancybox  -->
+        <link rel="stylesheet" href="css/jquery.fancybox.css">
+        <!-- animate -->
+        <link rel="stylesheet" href="css/animate.css">
         <!-- Main Stylesheet -->
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/normalize.min.css">
@@ -34,8 +42,10 @@
         <!-- Modernizer Script for old Browsers -->
         <script src="js/modernizr-2.6.2.min.js"></script>
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+        <script type="text/javascript" src="Bootstrap/jquery-2.2.0.min.js"></script>
         <script type="text/javascript" src="Bootstrap/bootstrap.min.js"></script>
         <script type="text/javascript" src="Bootstrap/bootstrap.js"></script>
+        <script type="text/javascript" src="jquery-ui-1.11.4.custom/jquery-ui.js"></script>
 
     </head>
     <body>
@@ -78,8 +88,8 @@
                 <h1>Frequently Asked Questions..</h1>
             <div class="col-md-12 tab2">
                 <div class="col-md-12 tab2-2">
-                    <h3 class="h3-4"><b>Q: What is my visa status?</b></h3>
-                    <h4 class="h3-4"><b>Ans:</b><i> I am on "F1" visa in the USA.</i></h4>
+                    <h3 class="h3-4"><b>Q: What is my visa Status?</b></h3>
+                    <h4 class="h3-4"><b>Ans:</b><i> I have "F1-Visa" status in the USA.</i></h4>
                 </div>
             </div>
 			
@@ -93,14 +103,14 @@
                 <div class="col-md-12 tab2">
                 <div class="col-md-12 tab2-2">
                     <h3 class="h3-4"><b>Q: When is my OPT period starting?</b></h3>
-                    <h4 class="h3-4"><b>Ans:</b><i> My OPT period will be starting from 24th February, 2017.</i></h4>
+                    <h4 class="h3-4"><b>Ans:</b><i> My OPT period will be starting from 24th Feb, 2017.</i></h4>
                 </div>
             </div>
 
             <div class="col-md-12 tab2">
                 <div class="col-md-12 tab2-2">
                     <h3 class="h3-4"><b>Q: Would I require an H1-B sponsorship?</b></h3>
-                    <h4 class="h3-4"><b>Ans:</b><i> Yes, I would require H1-B sponsorship to continue working in the USA once my OPT period is towards the end.</i></h4>
+                    <h4 class="h3-4"><b>Ans:</b><i> Yes, I would require H1-B sponsorship to continue working in the USA after my OPT period ends.</i></h4>
                 </div>
             </div>
 
@@ -153,9 +163,20 @@
             });
         </script>
 
+        <script>
+            $(".nav b").on("click", function(){
+                $(".icon-bar").find(".active").removeClass("active");
+                $(this).parent().addClass("active");
+            });
+        </script>
         <!-- For active tab change in navbar-- END -->
 
+        <!-- To change the color of the background as per the values-- END-->
+
         <script src="js/custom.js"></script>
+
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
