--- a/FAQs.html
+++ b/FAQs.html
@@ -84,7 +84,7 @@
 
         </header>
 
-        <Section id="mainbody" class="container-fluid" name="newpane">
+        <Section id="mainbody" class="container-fluid faqspane">
                 <h1>Frequently Asked Questions..</h1>
             <div class="col-md-12 tab2">
                 <div class="col-md-12 tab2-2">
