--- a/FAQs.html
+++ b/FAQs.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Introduction</title>
+        <title>FAQs</title>
         <meta name="description" content="Personal Website">
         <meta name="keywords" content="SQL, Java, Python, Javascript, Teradata, MySQL, R, Android SDK, Apache Solr, AWS, Kafka, Cassandra, Apache Spark">
         <meta name="author" content="Garima Chaturvedi">
