--- a/FAQs.html
+++ b/FAQs.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>FAQs</title>
+        <title>Introduction</title>
         <meta name="description" content="Personal Website">
         <meta name="keywords" content="SQL, Java, Python, Javascript, Teradata, MySQL, R, Android SDK, Apache Solr, AWS, Kafka, Cassandra, Apache Spark">
         <meta name="author" content="Garima Chaturvedi">
@@ -161,6 +161,14 @@
                 $(".nav").find(".active").removeClass("active");
                 $(this).parent().addClass("active");
             });
+			
+			if($("#toggle-btn").hasClass("nav-open"))
+				{
+					$("#toggle-btn").remove("nav-open");
+                    $("#toggle-btn").addClass("nav-close");
+                    $("#menu1").hide();
+				}
+				
         </script>
 
         <!-- For active tab change in navbar-- END -->
