--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 			   cur = cur[cur.length-1];
 			   var id = cur && cur.length ? cur[0].id : "";
 			   
-			   if($(window).scrollTop() + $(window).height() > $(document).height()) {
+			   if($(window).scrollTop() + $(window).height() > $(document).height()-1) {
 				   menuItems
 					 .parent().removeClass("active")
 					 .end().filter("[href='#"+"contact"+"']").parent().addClass("active");
