--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 				<div class="col-md-4 tab2">
                     <!--<div class="col-md-12 tab2-2">-->
 						<i class="fa fa-heart" id="fa-id" aria-hidden="true"></i>
-                        <h4 class="h3-4"><i>I love to code, debate, sketch, listen to music, watch series. I also love to dance when no one is watching and singing even when people dont wanna listen to it. :)<br><br>
+                        <h4 class="h3-4"><i>I love to paint, sketch, listen to music, watch series. I also love to dance when no one is watching and to sing even when people dont want to listen to it. :)<br><br>
 						And one more thing, I love tea.</i>
                         </h4>
                     <!--</div>-->
