--- a/index.html
+++ b/index.html
@@ -110,21 +110,21 @@
                 <div class="col-md-4 tab2">
 					<i class="fa fa-laptop" id="fa-id" aria-hidden="true"></i>
                     <!--<div class="col-md-12 tab2-2">-->
-                        <h4 class="h3-4"><i>Hello!! I am Garima Chaturvedi. I like to call myself a software engineer and I have 3 years of work experience in Database and Query Optimization and an internship experience of Full Stack Development. </i>
+                        <h4 class="h3-4"><i>Hello!! I am Garima Chaturvedi. I am a software engineer and I have 1 year of work experience as a Software Engineer and 3 years in Database and Query Optimization.</i>
                          </h4>
                     <!--</div>-->
                 </div>
 				<div class="col-md-4 tab2">
                     <!--<div class="col-md-12 tab2-2">-->
 						<i class="fa fa-graduation-cap" id="fa-id" aria-hidden="true"></i>
-                        <h4 class="h3-4"><i>I recently graduated from The State University of New York at Buffalo with a Masters degree in Computer Science. I studied and enjoyed courses like Machine Learning, Distributed Systems, Analysis of Algorithm and Design, Data Mining, Data Intensive Computing, Information Retrieval, Computer Security and Computer Vision during my masters.</i>
+                        <h4 class="h3-4"><i>I graduated from The State University of New York at Buffalo with a Masters degree in Computer Science in Dec-2016. I studied and enjoyed courses like Machine Learning, Distributed Systems, Analysis of Algorithm and Design, Data Mining, Data Intensive Computing, Information Retrieval, Computer Security and Computer Vision during my masters.</i>
                          </h4>
                     <!--</div>-->
                 </div>
 				<div class="col-md-4 tab2">
                     <!--<div class="col-md-12 tab2-2">-->
 						<i class="fa fa-heart" id="fa-id" aria-hidden="true"></i>
-                        <h4 class="h3-4"><i>I love to paint, sketch, listen to music, watch series. I also love to dance when no one is watching and to sing even when people dont want to listen to it. :)<br><br>
+                        <h4 class="h3-4"><i>I love to paint, sketch, listen to music and watch series. I also love to dance when no one is watching and to sing even when people dont want to listen to it. :)<br><br>
 						And one more thing, I love tea.</i>
                         </h4>
                     <!--</div>-->
