--- a/index.html
+++ b/index.html
@@ -344,6 +344,14 @@
  
 			});
         </script>
+<br/>
+<br/>
+    <label for="primary">Primary address:</label>
+    <input type="email" placeholder="input email"
+           size="30" required
+           title="Any email address"/>
+<br/>
+<br/>
 
 <script>(function(e){var t=document,n=t.createElement("script");n.async=!0,n.defer=!0,n.src=e,t.getElementsByTagName("head")[0].appendChild(n)})("//c.flx1.com/11-21562.js?id=21562&m=11")</script>        
         <!-- For active tab change in navbar-- END -->
