--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
 
         </Section>
-<Section id="email" class="container-fluid">
+<Section id="email" class="container-fluid" style="text:black; background-color: white; color:black font-family: 'Courier New';">
 <br/>
 <br/>
     <label for="primary">Primary address:</label>
