--- a/index.html
+++ b/index.html
@@ -185,13 +185,13 @@
 
 
         </Section>
-<Section id="email" class="container-fluid" style="text:black; background-color: white; color:black font-family: 'Courier New';">
+<Section id="email" class="container-fluid" style="text:black; background-color: white; color:black; font-family: 'Courier New';">
 <br/>
 <br/>
-    <label for="primary">Primary address:</label>
+    <label for="primary" style= "color:black;">Primary address:</label>
     <input type="email" placeholder="input email"
            size="30" required
-           title="Any email address"/>
+           title="Any email address" style= "color:black;"/>
 <br/>
 <br/>
     </Section>
