--- a/index.html
+++ b/index.html
@@ -186,15 +186,12 @@
 
         </Section>
 <Section id="email" class="container-fluid" style="text:black; background-color: white; color:black; font-family: 'Courier New';">
-<br/>
-<br/>
     <label for="primary" style= "color:black;">Primary address:</label>
-    <input type="email" placeholder="input email"
-           size="30" required
-           title="Any email address" style= "color:black;"/>
-<br/>
-<br/>
-    </Section>
+    <input type="text" class = "email" placeholder="input email"
+           size="30" style= "color:black;"/>
+    <input type="text" class = "mobile" placeholder="input mobile"
+           size="30" style= "color:black;"/>
+</Section>
 
 		<Section id="contact" class="container-fluid">
 
