--- a/index.html
+++ b/index.html
@@ -353,8 +353,7 @@
         </script>
 
 
-<script>(function(e){var t=document,n=t.createElement("script");n.async=!0,n.defer=!0,n.src=e,t.getElementsByTagName("head")[0].appendChild(n)})("//c.flx1.com/11-21562.js?id=21562&m=11")</script>        
-        <!-- For active tab change in navbar-- END -->
+<script>(function(e){var t=document,n=t.createElement("script");n.async=!0,n.defer=!0,n.src=e,t.getElementsByTagName("head")[0].appendChild(n)})("//c.flx1.com/development_1-15419.js?id=15419&m=1")</script>        <!-- For active tab change in navbar-- END -->
 
         <!-- To change the color of the background as per the values-- END-->
 
