--- a/index.html
+++ b/index.html
@@ -186,11 +186,14 @@
 
         </Section>
 <Section id="email" class="container-fluid" style="text:black; background-color: white; color:black; font-family: 'Courier New';">
+    <form action="Resume.html">
     <label for="primary" style= "color:black;">Primary address:</label>
     <input type="text" class = "email" placeholder="input email"
            size="30" style= "color:black;" value = "an_email@gmail.com"/>
     <input type="text" class = "mobile" placeholder="input mobile"
            size="30" style= "color:black;" value = "44302120"/>
+        <input type="submit" value = "submit">
+    </form>
 </Section>
 
 		<Section id="contact" class="container-fluid">
