--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             </div>
 
 
-        </Section>
+        <!--</Section>
 <Section id="email" class="container-fluid" style="text:black; background-color: white; color:black; font-family: 'Courier New';">
     <form action="Resume.html">
     <label for="primary" style= "color:black;">Primary address:</label>
@@ -194,7 +194,7 @@
            size="30" style= "color:black;" value = "44302120"/>
         <input type="submit" value = "submit">
     </form>
-</Section>
+</Section>-->
 
 		<Section id="contact" class="container-fluid">
 
